--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <table class="table" id="user-table">
                 <thead>
                     <tr>
-                        <th>Full Name</th>
-                        <th>User Email id</th>
+                        <th>Name</th>
+                        <th>Email id</th>
                         <th>Password</th>
-                        <th>Date of Birth</th>
+                        <th>Dob</th>
                         <th>Accepted terms?</th>
                     </tr>
                 </thead>
