--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <h1>Registration Form</h1>
         <form  id="registration-form">
             <div class="mb-3">
-                <label for="name" class="form-label">Full Name</label>
+                <label for="name" class="form-label">Name</label>
                 <input type="text" class="form-control" id="name" required>
             </div>
             <div class="mb-3">
-                <label for="email">User Email</label>
+                <label for="email">Email</label>
                 <input type="email" id="email" class="form-control" required>
             </div>
             <div class="mb-3">
